the invisible caption below image on resize : Fix improved and moved to uimage.css to avoid conflict with front

--- a/elements/upfront-image/css/uimage.css
+++ b/elements/upfront-image/css/uimage.css
@@ -1353,3 +1353,6 @@ div.uimage-controls i.upfront-icon:before,
 	margin-right:10px;
 }
 
+.upfront-editable_entity .uimage-below_image .upfront-image-caption-container {
+	overflow: visible !important;
+}
